--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #20A4F3, #182B3A);
+  background-color: #182B3A;
   margin: 0;
   padding: 0;
-  height: 100%;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  height: 100vh;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .option {
-  background-color: #fff;
+  background-color: #1E88E5;
   padding: 40px;
   margin: 20px;
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-  width: 80%;
+  width: calc(50% - 40px);
   max-width: 500px;
 }
 
@@ -36,9 +35,8 @@ body {
 
 .sub-options {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
 }
 
 .sub-option {
@@ -58,32 +56,13 @@ body {
   background-color: #2196F3;
 }
 
-@media (max-width: 992px) {
-  .option {
-    width: 90%;
-  }
-}
-
 @media (max-width: 768px) {
   .option {
+    width: calc(100% - 40px);
+    margin: 10px;
     padding: 20px;
   }
-
-  .sub-options {
-    flex-direction: column;
-  }
-
-  .sub-option {
-    width: auto;
-  }
 }
-
-@media (max-width: 576px) {
-  .option {
-    padding: 15px;
-  }
-}
-.button {background:#BDBDBD; }
 .amazon {
   background: linear-gradient(135deg, black, 40%, orange, 50%, white);
 }
