--- a/login.css
+++ b/login.css
@@ -12,7 +12,7 @@
 body {
 	align-items: center;
 	background-color: var(--white);
-	background: url("img.jpg");
+	background: url("WhatsApp Image 2024-05-05 at 10.57.43 AM.jpeg");
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
