--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
 
 /* Background image */
 body {
-  background-image: url('background.jpg');
+  background-image: url('navy-blue-background-high-quality-free-photo (1).jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
