--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
 body {
   background-image: url('navy-blue-background-high-quality-free-photo (1).jpg');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* Container styles */
