--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body, html {
 /* Background image */
 body {
   background-image: url('navy-blue-background-high-quality-free-photo (1).jpg');
-  background-size: cover;
+  background-size: auto;
   background-position: center;
 }
 
