--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   padding: 0;
 }
+body {
+  background-image: url('navy-blue-background-high-quality-free-photo (1).jpg');
+  background-size: auto;
+  background-position: center;
+}
 
 .container {
   display: flex;
