--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ body, html {
   display: block;
   width: 25px;
   height: 3px;
-  background-color: #000000;
+  background-color: #ffffff;
   margin: 5px;
   transition: transform 0.3s ease;
 }
