--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,7 @@ body, html {
   color: rgb(4, 4, 38);
 }
 footer {
-  background-color: #f1f1f1;
+  background-color: #17a8a3;
   padding: 10px 0;
   text-align: center;
   margin-top: 20px;
