--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
   width: 100%;
   padding: 15px 0;
   background-color: radial-gradient(circle, #17a8a3, #000000);
-  color: black;
+  color: #fff;
   text-align: left;
   font-size: 15px;
   font-weight: bold;
