--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #182B3A;
   margin: 0;
   padding: 0;
- background: radial-gradient(circle, #17a8a3, #000000);
+  background: radial-gradient(circle, #17a8a3, #000000);
 }
 
 .container {
@@ -23,6 +23,7 @@ body {
   transition: transform 0.3s ease;
   width: calc(50% - 40px);
   max-width: 500px;
+  cursor: pointer;
 }
 
 .option:hover {
@@ -35,7 +36,7 @@ body {
 }
 
 .sub-options {
-  display: flex;
+  display: none; /* Hide by default */
   flex-direction: column;
   align-items: center;
 }
@@ -43,7 +44,7 @@ body {
 .sub-option {
   padding: 15px 30px;
   margin: 10px;
-  background-color: linear-gradient(135deg, #20A4F3, #182B3A);
+  background: linear-gradient(135deg, #20A4F3, #182B3A);
   border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -71,4 +72,14 @@ body {
 
 .flipkart {
   background: linear-gradient(180deg, yellow, blue);
+}
+.wallet-box {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  border-radius: 5px;
+
 }
