--- a/login.css
+++ b/login.css
@@ -220,3 +220,8 @@ body {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+.btn img {
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
+}
